# icsd-surrogate

./: .copier-answers.yml  .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
logs/: app.jsonl  app_wide_log.jsonl
outputs/: MBTCP_raw_fields.json
paper/: main.typ  references.bib  usenix.typ
paper/assets/: high_level_pipeline.typ
paper/resources/: metadata.json
paper/sections/: abstract.typ  introduction.typ  inventory.csv  table.typ
src/icsd_surrogate/analyzers/: dynamic_field_analyzer.py  protocol_explorer.py
src/icsd_surrogate/cfg/: log_configuration.py
src/icsd_surrogate/model/: field_behavior.py  raw_field.py
src/icsd_surrogate/runnables/: runner.py
src/proteus/: proteusd.py
src/proteus/analyzers/: __init__.py  dynamic_field_analyzer.py
src/proteus/model/: cli_branding.py
src/proteus/protocols/: __init__.py  base.py  dnp3.py  modbus.py  registry.py  s7comm.py
src/proteus/results/: __init__.py  packet_struct.py
src/proteus/utils/: constants.py  packet_manipulator.py  response_validator.py  socket_manager.py
test/: test_cli_branding.py  test_field_behavior.py  test_packet_manipulator.py  test_packet_struct.py  test_protocols.py  test_socket_manager.py
tests/: sample.py  test_analyzers.py  test_cli_branding.py  test_field_behavior.py  test_packet_manipulator.py  test_packet_struct.py  test_protocols.py  test_raw_field.py  test_registry.py  test_response_validator.py  test_socket_manager.py
