#:schema https://json.schemastore.org/pyproject.json
#:schmea https://json.schemastore.org/ruff.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proteus"]

[project]
name = "proteus"
version = "0.1.0"
description = "The ICSClone progression"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "pyright",
    "readmeai",
    "pre-commit",
    "rich>=14.3.2",
    "plotly>=6.5.2",
    "ty>=0.0.17",
    "decimalog",
    "praetor",
    "cursusd",
    "click>=8.3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
managed = true

[tool.uv.sources]
praetor = { git = "https://github.com/cvasilatos/praetor.git" }
cursusd = { git = "https://github.com/cvasilatos/cursusd.git" }
decimalog = { git = "https://github.com/cvasilatos/decimalog.git" }

[tool.ty.environment]
python = "./.venv/bin/python"
python-version = "3.12"
root = ["src"]

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/proteus"]
omit = ["src/proteus/proteusd.py"]

[tool.coverage.report]
show_missing = true
